<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.druvu</groupId>
	<artifactId>jconsole-booster</artifactId>
	<version>1.0.0-SNAPSHOT</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>25</java.version>
		<launcher.name>JConsoleApp</launcher.name>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.beryx</groupId>
			<artifactId>awt-color-factory</artifactId>
			<version>1.0.2</version>
		</dependency>

		<dependency>
			<groupId>org.glassfish.main.external</groupId>
			<artifactId>jmxremote_optional-repackaged</artifactId>
			<version>5.0</version>
		</dependency>

		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.12.0</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<artifactId>slf4j-api</artifactId>
					<groupId>org.slf4j</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.44</version>
			<scope>provided</scope>
		</dependency>

		<!-- Logging dependencies -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.17</version>
		</dependency>

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.5.32</version>
			<exclusions>
				<exclusion>
					<artifactId>slf4j-api</artifactId>
					<groupId>org.slf4j</groupId>
				</exclusion>
			</exclusions>
		</dependency>

	</dependencies>

	<build>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.15.0</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>UTF-8</encoding>
					<debug>true</debug>
					<showDeprecation>true</showDeprecation>
					<showWarnings>true</showWarnings>
					<optimize>true</optimize>
					<fork>true</fork>
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>java.base/sun.net.util=com.druvu.jconsole</arg>
						<arg>--add-exports</arg>
						<arg>jdk.jconsole/sun.tools.jconsole=com.druvu.jconsole</arg>
						<arg>--add-exports</arg>
						<arg>java.rmi/sun.rmi.server=com.druvu.jconsole</arg>
						<arg>--add-exports</arg>
						<arg>java.rmi/sun.rmi.transport=com.druvu.jconsole</arg>
						<arg>--add-exports</arg>
						<arg>jdk.internal.jvmstat/sun.jvmstat.monitor=com.druvu.jconsole</arg>
						<arg>--add-exports</arg>
						<arg>jdk.management.agent/jdk.internal.agent=com.druvu.jconsole</arg>
						<arg>--add-exports</arg>
						<arg>jdk.jconsole/tools.jconsole.inspector=com.druvu.jconsole</arg>
					</compilerArgs>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.44</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.4.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.5.0</version>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.6.2</version>
				<executions>
					<execution>
						<id>enforce-versions</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<banDuplicatePomDependencyVersions/>
								<reactorModuleConvergence/>
								<dependencyConvergence/>
								<reactorModuleConvergence/>
								<requireJavaVersion>
									<version>${java.version}</version>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.6.3</version>

				<executions>
					<execution>
						<id>start</id>
						<goals>
							<goal>exec</goal>
						</goals>

						<configuration>
							<executable>java</executable>
							<arguments>
								<argument>--add-exports</argument>
								<argument>java.base/sun.net.util=com.druvu.jconsole</argument>
								<argument>--add-exports</argument>
								<argument>jdk.jconsole/sun.tools.jconsole=com.druvu.jconsole</argument>
								<argument>--add-exports</argument>
								<argument>java.rmi/sun.rmi.server=com.druvu.jconsole</argument>
								<argument>--add-exports</argument>
								<argument>java.rmi/sun.rmi.transport=com.druvu.jconsole</argument>
								<argument>--add-exports</argument>
								<argument>jdk.internal.jvmstat/sun.jvmstat.monitor=com.druvu.jconsole</argument>
								<argument>--add-exports</argument>
								<argument>jdk.management.agent/jdk.internal.agent=com.druvu.jconsole</argument>
								<argument>-Dswing.defaultlaf=javax.swing.plaf.nimbus.NimbusLookAndFeel</argument>
								<argument>--module-path</argument>
								<modulepath/>
								<argument>-m</argument>
								<argument>com.druvu.jconsole/com.druvu.jconsole.JConsole</argument>
								<argument>-c=#8BC6E1FF</argument>
								<argument>-debug</argument>
							</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>com.diffplug.spotless</groupId>
				<artifactId>spotless-maven-plugin</artifactId>
				<version>2.44.3</version>
				<configuration>
					<java>
						<palantirJavaFormat>
							<version>2.90.0</version>                     <!-- optional -->
							<style>PALANTIR</style>                       <!-- or AOSP/GOOGLE (optional) -->
							<formatJavadoc>true
							</formatJavadoc>          <!-- defaults to false (optional, requires at least Palantir 2.39.0) -->
						</palantirJavaFormat>
						<removeUnusedImports />
					</java>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
						<phase>verify</phase>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>


</project>
